--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   "author": "Jan-André Zinser",
   "license": "MIT",
   "peerDependencies": {
-    "webdriverio": "^4.0.7"
+    "webdriverio": "^5.0.0"
   },
   "dependencies": {
     "babel-runtime": "^6.9.0",
@@ -48,6 +48,9 @@
     "which": "^1.2.10"
   },
   "devDependencies": {
+    "@wdio/mocha-framework": "^5.7.8",
+    "@wdio/sauce-service": "^5.7.8",
+    "@wdio/selenium-standalone-service": "^5.7.8",
     "babel-cli": "^6.9.0",
     "babel-plugin-lodash": "^3.2.9",
     "babel-plugin-syntax-async-functions": "^6.8.0",
@@ -59,17 +62,14 @@
     "chai": "^3.5.0",
     "gh-pages": "^0.11.0",
     "glob": "^7.1.0",
-    "http-server": "^0.9.0",
+    "http-server": "^0.11.1",
     "mocha": "^2.4.5",
     "node-resemble-js": "0.0.5",
     "np": "^2.9.0",
     "rimraf": "^2.5.2",
     "selenium-standalone": "^6.4.1",
     "sinon": "^1.17.6",
-    "wdio-mocha-framework": "^0.3.2",
-    "wdio-sauce-service": "^0.4.0",
-    "wdio-selenium-standalone-service": "0.0.8",
-    "webdriverio": "~4.8.0"
+    "webdriverio": "~5.0.0"
   },
   "engines": {
     "node": ">=4"
