--- a/.babelrc
+++ b/.babelrc
@@ -1,12 +1,12 @@
 {
   "presets": [
-    "es2015"
+    "@babel/preset-env"
   ],
   "plugins": [
     "lodash",
     "syntax-async-functions",
-    "transform-regenerator",
-    "transform-runtime",
-    "transform-object-rest-spread"
+    "@babel/plugin-transform-regenerator",
+    "@babel/plugin-transform-runtime",
+    "@babel/plugin-proposal-object-rest-spread"
   ]
 }
