--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "clean-tmp": "rimraf .tmp",
     "clean": "npm run clean-lib && npm run clean-tmp",
     "build": "npm run clean && babel ./src -d lib",
-    "test": "npm run clean && mocha --compilers js:babel-register --timeout 15000 --recursive test/unit",
+    "test": "npm run clean && mocha --require @babel/register --timeout 30000 --recursive test/unit",
     "test:local": "npm run clean && wdio ./test/wdio/wdio.local-conf.js",
     "test:sauce": "npm run clean && wdio ./test/wdio/wdio.sauce-conf.js",
     "test:appveyor": "npm run clean && wdio ./test/wdio/wdio.appveyor-conf.js",
-    "test:standalone": "npm run clean && npm run selenium-install && mocha --compilers js:babel-register --timeout 30000 --recursive test/standalone",
+    "test:standalone": "npm run clean && npm run selenium-install && mocha --require @babel/register --timeout 30000 --recursive test/standalone",
     "selenium-install": "selenium-standalone install",
     "server": "http-server test/fixture/web -p 3000",
     "deploy-integration-tests": "gh-pages -d test/fixture/web",
@@ -34,7 +34,9 @@
     "webdriverio": "^5.0.0"
   },
   "dependencies": {
-    "babel-runtime": "^6.9.0",
+    "@babel/core": "^7.4.3",
+    "@babel/runtime": "^7.4.3",
+    "@wdio/cli": "^5.7.10",
     "debug": "^2.2.0",
     "fs-extra": "^3.0.1",
     "gm": "^1.22.0",
@@ -45,17 +47,18 @@
     "which": "^1.2.10"
   },
   "devDependencies": {
+    "@babel/cli": "^7.4.3",
+    "@babel/plugin-proposal-object-rest-spread": "^7.4.3",
+    "@babel/plugin-transform-regenerator": "^7.4.3",
+    "@babel/plugin-transform-runtime": "^7.4.3",
+    "@babel/preset-env": "^7.4.3",
+    "@babel/register": "^7.4.0",
+    "@wdio/local-runner": "^5.7.9",
     "@wdio/mocha-framework": "^5.7.8",
     "@wdio/sauce-service": "^5.7.8",
     "@wdio/selenium-standalone-service": "^5.7.8",
-    "babel-cli": "^6.9.0",
     "babel-plugin-lodash": "^3.2.9",
     "babel-plugin-syntax-async-functions": "^6.8.0",
-    "babel-plugin-transform-object-rest-spread": "^6.8.0",
-    "babel-plugin-transform-regenerator": "^6.9.0",
-    "babel-plugin-transform-runtime": "^6.9.0",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-register": "^6.9.0",
     "chai": "^3.5.0",
     "gh-pages": "^0.11.0",
     "glob": "^7.1.0",
